@@ -450,7 +450,7 @@ public class CharacterPairMatcher implements ICharacterPairMatcher
 		 */
 		public boolean contains(char c)
 		{
-			return getAllCharacters().contains(new Character(c));
+			return getAllCharacters().contains(Character.valueOf(c));
 		}
 
 		private Set<Character> fCharsCache = null;
@@ -463,8 +463,10 @@ public class CharacterPairMatcher implements ICharacterPairMatcher
 			if (fCharsCache == null)
 			{
 				Set<Character> set = new HashSet<Character>();
-				for (int i = 0; i < fPairs.length; i++)
-					set.add(new Character(fPairs[i]));
+				for (char pair : fPairs)
+				{
+					set.add(Character.valueOf(pair));
+				}
 				fCharsCache = set;
 			}
 			return fCharsCache;
